# web-rekomendasi

./: .gitignore  ANBIG - Modeling.ipynb  data_manipulation.ipynb  data_ulasan.csv  gabungan_review_tempat_wisata.csv  gabungan_tempat_wisata.json  readMe.txt  tempat_wisata_semua.csv
app/: app.py  pyproject.toml
app/core/: config.py  database.py
app/models/: destinations.py  user.py
app/schemas/: wisata.py
app/services/: auth.py  deps.py  get_MF.py  get_embedding.py  get_preferences.py
backend/: package-lock.json  package.json  tailwind.config.ts
backend/api/: AuthContext.tsx  api.ts
backend/app/: app.css  root.tsx  routes.ts
backend/app/routes/: LoginPage.tsx  MapPage.tsx  UserPreferences.tsx  WisataDetail.tsx  wisata.tsx
backend/app/welcome/: welcome.tsx
backend/components/: Maps.tsx  Navbar.tsx  PopupMapsCard.tsx  ReviewCard.tsx  SearchBar.tsx  WisataCard.tsx  WisataDescription.tsx  WisataFasilitas.tsx  WisataLokasi.tsx  WisataReview.tsx
backend/components/MarkIcon/: goldIcon.ts  greenIcon.ts  redIcon.ts
data/: data_ulasan_with_user_id.csv  informasi_wisata.csv  user_credentials.csv
jupyter/: ANBIG - KEL 5.ipynb  ScrapingAPI.ipynb  UAS_ABD.ipynb
