[project]
name = "web-rekomendasi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "implicit>=0.7.2",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
